--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ $(document).ready(function() {
   <p class="story">태권도 3품 취득</p>
   <p class="year">2016</p>
   <a href="http://ishinjeong.icems.kr/main.do" id="school">인천신정중학교 입학</a>
-  <p class="story">인천명선초학교 졸업</p>
+  <p class="story">인천명선초등학교 졸업</p>
   <p class="year">2014</p>
   <a href="http://ims.icees.kr/main.do#closeWinDay" id="school">인천명선초등학교 전학</a>
   <p class="year">2011</p>
@@ -257,7 +257,7 @@ $(document).ready(function() {
   <p class="story">태권도 3품 취득</p>
   <p class="year">2016</p>
   <a href="http://ishinjeong.icems.kr/main.do" id="school">인천신정중학교 입학</a>
-  <p class="story">인천명선초학교 졸업</p>
+  <p class="story">인천명선초등학교 졸업</p>
   <p class="year">2014</p>
   <a href="http://ims.icees.kr/main.do#closeWinDay" id="school">인천명선초등학교 전학</a>
   <p class="year">2011</p>
